--- a/blank/index.html
+++ b/blank/index.html
@@ -14,7 +14,9 @@
 
 <body style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
 
-
+    <p class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray'>
+        Copyright &copy; 2021 LemonOrange
+    </p>
     <script src="anime.min.js"></script>
     <script src="index.js"></script>
 </body>
