--- a/index.html
+++ b/index.html
@@ -10,17 +10,192 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet"> 
     
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
 
     <section style="padding-top: 10vh;">
-        <h1 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.5rem, min(7vh, 7vw), 7rem); letter-spacing: 5px; margin:0'>
-            DeepFusion
-        </h1>
-        <h2 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.5rem, min(2vh, 2vw), 2rem); letter-spacing: 1px; margin:0; margin-left:1vw'>
-            By LemonOrange
-        </h2>
+        <section style='display:flex; flex-direction: row; padding-right: 2vw'>
+            <a href="https://github.com/LemonOrangeWasTaken/DeepFusion">
+                <svg
+                width=auto
+                height=auto
+                style='height: clamp(0.5rem, min(10vw, 10vh), 10rem); margin-right: 2vw; padding-top: 2vh'
+                viewBox="0 0 40.594889 54.125683"
+                version="1.1"
+                id="svg311815"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:svg="http://www.w3.org/2000/svg">
+                <defs
+                    id="defs311812">
+                    <linearGradient
+                    id="linearGradient325915">
+                    <stop
+                        style="stop-color:#ff00d0;stop-opacity:1"
+                        offset="0"
+                        id="stop325911" />
+                    <stop
+                        style="stop-color:#008bff;stop-opacity:1"
+                        offset="1"
+                        id="stop325913" />
+                    </linearGradient>
+                    <rect
+                    x="256"
+                    y="192"
+                    width="608"
+                    height="128"
+                    id="rect318434" />
+                    <linearGradient
+                    xlink:href="#linearGradient325915"
+                    id="linearGradient325919"
+                    x1="33.866665"
+                    y1="84.666664"
+                    x2="63.499996"
+                    y2="50.799999"
+                    gradientUnits="userSpaceOnUse" />
+                    <linearGradient
+                    xlink:href="#linearGradient325915"
+                    id="linearGradient332074"
+                    gradientUnits="userSpaceOnUse"
+                    x1="33.866665"
+                    y1="84.666664"
+                    x2="63.499996"
+                    y2="50.799999"
+                    gradientTransform="translate(12.7)" />
+                    <linearGradient
+                    xlink:href="#linearGradient325915"
+                    id="linearGradient333423"
+                    gradientUnits="userSpaceOnUse"
+                    x1="33.866665"
+                    y1="84.666664"
+                    x2="63.499996"
+                    y2="50.799999" />
+                    <linearGradient
+                    xlink:href="#linearGradient325915"
+                    id="linearGradient333425"
+                    gradientUnits="userSpaceOnUse"
+                    x1="33.866665"
+                    y1="84.666664"
+                    x2="63.499996"
+                    y2="50.799999" />
+                    <linearGradient
+                    xlink:href="#linearGradient325915"
+                    id="linearGradient333427"
+                    gradientUnits="userSpaceOnUse"
+                    x1="33.866665"
+                    y1="84.666664"
+                    x2="63.499996"
+                    y2="50.799999" />
+                    <linearGradient
+                    xlink:href="#linearGradient325915"
+                    id="linearGradient333429"
+                    gradientUnits="userSpaceOnUse"
+                    x1="33.866665"
+                    y1="84.666664"
+                    x2="63.499996"
+                    y2="50.799999" />
+                </defs>
+                <g
+                    id="layer1"
+                    transform="translate(-13.569222,-6.8038238)">
+                    <text
+                    xml:space="preserve"
+                    transform="scale(0.26458333)"
+                    id="text318432"
+                    style="font-style:normal;font-weight:normal;font-size:40px;line-height:84.8;font-family:sans-serif;letter-spacing:12.32px;word-spacing:0px;white-space:pre;shape-inside:url(#rect318434);fill:#000000;fill-opacity:1;stroke:none"><tspan
+                        x="256"
+                        y="2026.3907"
+                        id="tspan335147"><tspan
+                        dx="0 30.800781"
+                        id="tspan335145">DE</tspan></tspan></text>
+                    <g
+                    id="g333421"
+                    transform="matrix(1.5981991,0,0,1.5981991,-60.89076,-81.188506)">
+                    <g
+                        aria-label="DeepFusion"
+                        id="text322730"
+                        style="font-size:22.5778px;line-height:84.8;letter-spacing:0.529167px;word-spacing:0px;stroke-width:0.264583" />
+                    <g
+                        id="g334796"
+                        transform="translate(8.4903197,4.2571805)">
+                        <path
+                        id="path331238"
+                        style="color:#000000;fill:#e6e6e6;stroke-width:3.77953;stroke-linecap:round;-inkscape-stroke:none"
+                        d="m 160.01758,239.99805 a 16.000007,16.000007 0 0 0 -1.70117,0.0957 16.000007,16.000007 0 0 1 1.68554,-0.0937 h 0.0547 a 16.000007,16.000007 0 0 0 -0.0391,-0.002 z m -2.22656,0.17187 a 16.000007,16.000007 0 0 0 -1.1543,0.19727 16.000007,16.000007 0 0 1 1.1543,-0.19727 z m -1.76368,0.34961 a 16.000007,16.000007 0 0 0 -1.01562,0.29297 16.000007,16.000007 0 0 1 1.01562,-0.29297 z m -1.66015,0.52149 a 16.000007,16.000007 0 0 0 -0.95117,0.39453 16.000007,16.000007 0 0 1 0.95117,-0.39453 z m -1.56055,0.68164 a 16.000007,16.000007 0 0 0 -0.94336,0.52148 16.000007,16.000007 0 0 1 0.94336,-0.52148 z m -1.4707,0.83593 a 16.000007,16.000007 0 0 0 -0.21485,0.12891 16.000007,16.000007 0 0 0 -0.66015,0.49219 16.000007,16.000007 0 0 1 0.875,-0.6211 z m -1.41797,1.02539 a 16.000007,16.000007 0 0 0 -0.81836,0.73047 16.000007,16.000007 0 0 1 0.81836,-0.73047 z m -1.29492,1.17188 a 16.000007,16.000007 0 0 0 -0.95703,1.07031 16.000007,16.000007 0 0 1 0.95703,-1.07031 z m -1.14063,1.28125 a 16.000007,16.000007 0 0 0 -1.02148,1.43555 16.000007,16.000007 0 0 1 1.02148,-1.43555 z m -1.13867,1.64258 a 16.000007,16.000007 0 0 0 -0.72656,1.3164 16.000007,16.000007 0 0 1 0.72656,-1.3164 z m -0.93945,1.81054 a 16.000007,16.000007 0 0 0 -0.46094,1.11524 16.000007,16.000007 0 0 1 0.46094,-1.11524 z m -0.65039,1.71875 a 16.000007,16.000007 0 0 0 -0.30274,1.04883 16.000007,16.000007 0 0 1 0.30274,-1.04883 z m -0.43946,1.73243 a 16.000007,16.000007 0 0 0 -0.17773,1.04687 16.000007,16.000007 0 0 1 0.17773,-1.04687 z m -0.24218,1.72851 a 16.000007,16.000007 0 0 0 -0.0586,1.03906 16.000007,16.000007 0 0 1 0.0586,-1.03906 z m -0.0488,1.78125 a 16.000007,16.000007 0 0 0 0.0566,0.99805 16.000007,16.000007 0 0 1 -0.0566,-0.99805 z m 0.14453,1.73828 a 16.000007,16.000007 0 0 0 0.16406,0.97266 16.000007,16.000007 0 0 1 -0.16406,-0.97266 z m 0.33203,1.7168 a 16.000007,16.000007 0 0 0 0.27734,0.9668 16.000007,16.000007 0 0 1 -0.27734,-0.9668 z m 0.50781,1.64648 a 16.000007,16.000007 0 0 0 0.39453,0.95313 16.000007,16.000007 0 0 1 -0.39453,-0.95313 z m 0.69336,1.60157 a 16.000007,16.000007 0 0 0 0.51563,0.93359 16.000007,16.000007 0 0 1 -0.51563,-0.93359 z m 0.85742,1.50976 a 16.000007,16.000007 0 0 0 0.12696,0.21289 l 32,47.99805 a 16.000007,16.000007 0 0 0 22.1914,4.43555 16.000007,16.000007 0 0 0 4.43555,-22.18164 L 189.89453,272 h -29.89258 a 16.000007,16.000007 0 0 1 -13.44336,-7.33594 z"
+                        transform="scale(0.26458333)" />
+                        <path
+                        id="path330964"
+                        style="color:#000000;fill:#e6e6e6;stroke-width:3.77953;stroke-linecap:round;-inkscape-stroke:none"
+                        d="m 176.01562,192.00195 a 16,16 0 0 0 -0.0176,0.002 h 0.0371 a 16,16 0 0 0 -0.0195,-0.002 z m -2.92578,0.28516 a 16,16 0 0 0 -0.27734,0.0449 16,16 0 0 1 0.27734,-0.0449 z m -2.9707,0.85937 a 16,16 0 0 0 -0.34766,0.13282 16,16 0 0 1 0.34766,-0.13282 z m -2.77539,1.42774 a 16,16 0 0 0 -0.2168,0.11523 16,16 0 0 0 -0.13086,0.11133 16,16 0 0 1 0.34766,-0.22656 z m -2.81445,2.30469 a 16,16 0 0 0 -0.20703,0.20898 16,16 0 0 1 0.20703,-0.20898 z m -2.22852,2.88476 a 16,16 0 0 0 -0.0918,0.14258 16,16 0 0 1 0.0918,-0.14258 z m -1.5293,3.34961 a 16,16 0 0 0 -0.0137,0.0527 16,16 0 0 1 0.0137,-0.0527 z m -0.69336,3.45117 a 16,16 0 0 0 -0.0117,0.21289 16,16 0 0 1 0.0117,-0.21289 z m 0.0762,3.51563 a 16,16 0 0 0 0.0508,0.32226 16,16 0 0 1 -0.0508,-0.32226 z m 0.84961,3.43359 a 16,16 0 0 0 0.13281,0.34375 16,16 0 0 1 -0.13281,-0.34375 z m 1.59961,3.19531 a 16,16 0 0 0 0.0859,0.16407 L 178.10547,240 H 208 a 16.000007,16.000007 0 0 1 13.5332,7.46289 16,16 0 0 0 -0.21679,-0.33984 l -15.41407,-23.11914 h -29.90429 a 16,16 0 0 1 -13.39453,-7.29493 z m 58.95507,30.79297 a 16.000007,16.000007 0 0 1 0.85938,1.55274 16,16 0 0 0 -0.85938,-1.55274 z m 0.86329,1.56055 a 16.000007,16.000007 0 0 1 0.67968,1.64453 16,16 0 0 0 -0.67968,-1.64453 z m 0.68359,1.6582 a 16.000007,16.000007 0 0 1 0.48437,1.67578 16,16 0 0 0 -0.48437,-1.67578 z m 0.50391,1.75977 a 16.000007,16.000007 0 0 1 0.2832,1.67187 16,16 0 0 0 -0.2832,-1.67187 z m 0.29492,1.77148 a 16.000007,16.000007 0 0 1 0.0957,1.68164 16,16 0 0 0 -0.0957,-1.68164 z m -0.13086,4.42969 a 16.000007,16.000007 0 0 1 -0.0469,0.26758 16,16 0 0 0 0.0469,-0.26758 z m -0.10547,0.56055 a 16.000007,16.000007 0 0 1 -0.0508,0.24804 16,16 0 0 0 0.0508,-0.24804 z m -0.13867,0.61523 a 16.000007,16.000007 0 0 1 -0.0488,0.18946 16,16 0 0 0 0.0488,-0.18946 z m -0.15235,0.56641 a 16.000007,16.000007 0 0 1 -0.0488,0.16211 16,16 0 0 0 0.0488,-0.16211 z m -0.16992,0.55078 a 16.000007,16.000007 0 0 1 -0.0469,0.14062 16,16 0 0 0 0.0469,-0.14062 z m -12.48828,10.79101 a 16.000007,16.000007 0 0 1 -0.0547,0.01 16,16 0 0 0 0.0547,-0.01 z"
+                        transform="scale(0.26458333)" />
+                        <path
+                        style="color:#000000;fill:#ffffff;stroke-linecap:round;-inkscape-stroke:none"
+                        d="m 46.566406,50.800781 a 4.2333331,4.2333331 0 0 0 -4.232422,4.232422 4.2333331,4.2333331 0 0 0 4.232422,4.234375 H 59.267578 A 4.2333331,4.2333331 0 0 0 63.5,55.033203 4.2333331,4.2333331 0 0 0 59.267578,50.800781 Z"
+                        id="path330814" />
+                        <path
+                        style="color:#000000;fill:#ffffff;stroke-linecap:round;-inkscape-stroke:none"
+                        d="m 42.333984,63.5 a 4.233335,4.233335 0 0 0 -4.234375,4.232422 4.233335,4.233335 0 0 0 4.234375,4.234375 H 55.033203 A 4.233335,4.233335 0 0 0 59.267578,67.732422 4.233335,4.233335 0 0 0 55.033203,63.5 Z"
+                        id="path330929" />
+                        <g
+                        id="g325879"
+                        style="fill:url(#linearGradient325919);fill-opacity:1">
+                        <circle
+                            style="fill:url(#linearGradient333423);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
+                            id="path311944"
+                            cx="46.566666"
+                            cy="55.033329"
+                            r="4.2333331" />
+                        <circle
+                            style="fill:url(#linearGradient333425);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
+                            id="circle312026"
+                            cx="59.26667"
+                            cy="55.033329"
+                            r="4.2333331" />
+                        <circle
+                            style="fill:url(#linearGradient333427);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
+                            id="circle312028"
+                            cx="42.333336"
+                            cy="67.73333"
+                            r="4.2333331" />
+                        <circle
+                            style="fill:url(#linearGradient333429);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
+                            id="circle312030"
+                            cx="55.03334"
+                            cy="67.73333"
+                            r="4.2333331" />
+                        <circle
+                            style="fill:url(#linearGradient332074);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
+                            id="circle312032"
+                            cx="50.799999"
+                            cy="80.433334"
+                            r="4.2333331" />
+                        </g>
+                        <path
+                        style="fill:#cccccc;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                        d="m 55.670148,61.055281 -9.103741,-1.787702 7.91192,1.21e-4 z"
+                        id="path332386" />
+                        <path
+                        style="fill:#cccccc;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                        d="m 51.434748,73.754247 -9.103741,-1.787702 7.91192,1.21e-4 z"
+                        id="path333163" />
+                    </g>
+                    </g>
+                </g>
+                </svg>
+            </a>
+
+            <section>
+                <h1 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.5rem, min(7vh, 7vw), 7rem); letter-spacing: 5px; margin:0'>
+                    DeepFusion
+                </h1>
+                <h2 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.5rem, min(2vh, 2vw), 2rem); letter-spacing: 1px; margin:0; margin-left:1vw'>
+                    By LemonOrange
+                </h2>
+            </section>
+        </section>
     </section>
     <section style="margin-top:10vh">
         <a class='buttonlike nolinkunderline' href='model-maker/index.html'>
@@ -34,6 +209,10 @@
     <!-- github corner thing -->
     <a href="https://github.com/LemonOrangeWasTaken/DeepFusion" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#ffffff; color:#1d2021; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
     
+    <p class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray'>
+        Copyright &copy; 2021 LemonOrange
+    </p>
+
     <script src="anime.min.js"></script>
     <script src="index.js"></script>
 </body>
