added buttons and menu demos

--- a/blank/index.html
+++ b/blank/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet"> 
     
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
 </head>
 
 <body style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
@@ -17,7 +18,7 @@
     <p class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray'>
         Copyright &copy; 2021 LemonOrange
     </p>
-    <script src="anime.min.js"></script>
+    <script src="../anime.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
