--- a/index.html
+++ b/index.html
@@ -197,13 +197,14 @@
             </section>
         </section>
     </section>
-    <section style="margin-top:10vh">
-        <a class='buttonlike nolinkunderline' href='model-maker/index.html'>
+    <section style="margin-top:10vh; width:50vw; display:flex; justify-content: center; align-items: center;">
+        <a class='buttonlike nolinkunderline absolute-btn' href='model-maker/index.html'>
             Create Model
         </a>
-        <a class='buttonlike nolinkunderline' href='about/index.html'>
+        <a class='buttonlike nolinkunderline absolute-btn' href='about/index.html'>
             What Is This
         </a>
+
     </section>
 
     <!-- github corner thing -->
