--- a/index.html
+++ b/index.html
@@ -20,169 +20,22 @@
         <section style='display:flex; flex-direction: row; padding-right: 2vw'>
             <a href="https://github.com/LemonOrangeWasTaken/DeepFusion">
                 <svg
-                width=auto
-                height=auto
+                width="auto"
+                height="auto"
                 style='height: clamp(0.5rem, min(10vw, 10vh), 10rem); margin-right: 2vw; padding-top: 2vh'
-                viewBox="0 0 40.594889 54.125683"
+                viewBox="0 0 135.46666 135.46667"
                 version="1.1"
-                id="svg311815"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
+                id="svg5"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:svg="http://www.w3.org/2000/svg">
                 <defs
-                    id="defs311812">
-                    <linearGradient
-                    id="linearGradient325915">
-                    <stop
-                        style="stop-color:#ff00d0;stop-opacity:1"
-                        offset="0"
-                        id="stop325911" />
-                    <stop
-                        style="stop-color:#008bff;stop-opacity:1"
-                        offset="1"
-                        id="stop325913" />
-                    </linearGradient>
-                    <rect
-                    x="256"
-                    y="192"
-                    width="608"
-                    height="128"
-                    id="rect318434" />
-                    <linearGradient
-                    xlink:href="#linearGradient325915"
-                    id="linearGradient325919"
-                    x1="33.866665"
-                    y1="84.666664"
-                    x2="63.499996"
-                    y2="50.799999"
-                    gradientUnits="userSpaceOnUse" />
-                    <linearGradient
-                    xlink:href="#linearGradient325915"
-                    id="linearGradient332074"
-                    gradientUnits="userSpaceOnUse"
-                    x1="33.866665"
-                    y1="84.666664"
-                    x2="63.499996"
-                    y2="50.799999"
-                    gradientTransform="translate(12.7)" />
-                    <linearGradient
-                    xlink:href="#linearGradient325915"
-                    id="linearGradient333423"
-                    gradientUnits="userSpaceOnUse"
-                    x1="33.866665"
-                    y1="84.666664"
-                    x2="63.499996"
-                    y2="50.799999" />
-                    <linearGradient
-                    xlink:href="#linearGradient325915"
-                    id="linearGradient333425"
-                    gradientUnits="userSpaceOnUse"
-                    x1="33.866665"
-                    y1="84.666664"
-                    x2="63.499996"
-                    y2="50.799999" />
-                    <linearGradient
-                    xlink:href="#linearGradient325915"
-                    id="linearGradient333427"
-                    gradientUnits="userSpaceOnUse"
-                    x1="33.866665"
-                    y1="84.666664"
-                    x2="63.499996"
-                    y2="50.799999" />
-                    <linearGradient
-                    xlink:href="#linearGradient325915"
-                    id="linearGradient333429"
-                    gradientUnits="userSpaceOnUse"
-                    x1="33.866665"
-                    y1="84.666664"
-                    x2="63.499996"
-                    y2="50.799999" />
-                </defs>
+                    id="defs2" />
                 <g
-                    id="layer1"
-                    transform="translate(-13.569222,-6.8038238)">
-                    <text
-                    xml:space="preserve"
-                    transform="scale(0.26458333)"
-                    id="text318432"
-                    style="font-style:normal;font-weight:normal;font-size:40px;line-height:84.8;font-family:sans-serif;letter-spacing:12.32px;word-spacing:0px;white-space:pre;shape-inside:url(#rect318434);fill:#000000;fill-opacity:1;stroke:none"><tspan
-                        x="256"
-                        y="2026.3907"
-                        id="tspan335147"><tspan
-                        dx="0 30.800781"
-                        id="tspan335145">DE</tspan></tspan></text>
-                    <g
-                    id="g333421"
-                    transform="matrix(1.5981991,0,0,1.5981991,-60.89076,-81.188506)">
-                    <g
-                        aria-label="DeepFusion"
-                        id="text322730"
-                        style="font-size:22.5778px;line-height:84.8;letter-spacing:0.529167px;word-spacing:0px;stroke-width:0.264583" />
-                    <g
-                        id="g334796"
-                        transform="translate(8.4903197,4.2571805)">
-                        <path
-                        id="path331238"
-                        style="color:#000000;fill:#e6e6e6;stroke-width:3.77953;stroke-linecap:round;-inkscape-stroke:none"
-                        d="m 160.01758,239.99805 a 16.000007,16.000007 0 0 0 -1.70117,0.0957 16.000007,16.000007 0 0 1 1.68554,-0.0937 h 0.0547 a 16.000007,16.000007 0 0 0 -0.0391,-0.002 z m -2.22656,0.17187 a 16.000007,16.000007 0 0 0 -1.1543,0.19727 16.000007,16.000007 0 0 1 1.1543,-0.19727 z m -1.76368,0.34961 a 16.000007,16.000007 0 0 0 -1.01562,0.29297 16.000007,16.000007 0 0 1 1.01562,-0.29297 z m -1.66015,0.52149 a 16.000007,16.000007 0 0 0 -0.95117,0.39453 16.000007,16.000007 0 0 1 0.95117,-0.39453 z m -1.56055,0.68164 a 16.000007,16.000007 0 0 0 -0.94336,0.52148 16.000007,16.000007 0 0 1 0.94336,-0.52148 z m -1.4707,0.83593 a 16.000007,16.000007 0 0 0 -0.21485,0.12891 16.000007,16.000007 0 0 0 -0.66015,0.49219 16.000007,16.000007 0 0 1 0.875,-0.6211 z m -1.41797,1.02539 a 16.000007,16.000007 0 0 0 -0.81836,0.73047 16.000007,16.000007 0 0 1 0.81836,-0.73047 z m -1.29492,1.17188 a 16.000007,16.000007 0 0 0 -0.95703,1.07031 16.000007,16.000007 0 0 1 0.95703,-1.07031 z m -1.14063,1.28125 a 16.000007,16.000007 0 0 0 -1.02148,1.43555 16.000007,16.000007 0 0 1 1.02148,-1.43555 z m -1.13867,1.64258 a 16.000007,16.000007 0 0 0 -0.72656,1.3164 16.000007,16.000007 0 0 1 0.72656,-1.3164 z m -0.93945,1.81054 a 16.000007,16.000007 0 0 0 -0.46094,1.11524 16.000007,16.000007 0 0 1 0.46094,-1.11524 z m -0.65039,1.71875 a 16.000007,16.000007 0 0 0 -0.30274,1.04883 16.000007,16.000007 0 0 1 0.30274,-1.04883 z m -0.43946,1.73243 a 16.000007,16.000007 0 0 0 -0.17773,1.04687 16.000007,16.000007 0 0 1 0.17773,-1.04687 z m -0.24218,1.72851 a 16.000007,16.000007 0 0 0 -0.0586,1.03906 16.000007,16.000007 0 0 1 0.0586,-1.03906 z m -0.0488,1.78125 a 16.000007,16.000007 0 0 0 0.0566,0.99805 16.000007,16.000007 0 0 1 -0.0566,-0.99805 z m 0.14453,1.73828 a 16.000007,16.000007 0 0 0 0.16406,0.97266 16.000007,16.000007 0 0 1 -0.16406,-0.97266 z m 0.33203,1.7168 a 16.000007,16.000007 0 0 0 0.27734,0.9668 16.000007,16.000007 0 0 1 -0.27734,-0.9668 z m 0.50781,1.64648 a 16.000007,16.000007 0 0 0 0.39453,0.95313 16.000007,16.000007 0 0 1 -0.39453,-0.95313 z m 0.69336,1.60157 a 16.000007,16.000007 0 0 0 0.51563,0.93359 16.000007,16.000007 0 0 1 -0.51563,-0.93359 z m 0.85742,1.50976 a 16.000007,16.000007 0 0 0 0.12696,0.21289 l 32,47.99805 a 16.000007,16.000007 0 0 0 22.1914,4.43555 16.000007,16.000007 0 0 0 4.43555,-22.18164 L 189.89453,272 h -29.89258 a 16.000007,16.000007 0 0 1 -13.44336,-7.33594 z"
-                        transform="scale(0.26458333)" />
-                        <path
-                        id="path330964"
-                        style="color:#000000;fill:#e6e6e6;stroke-width:3.77953;stroke-linecap:round;-inkscape-stroke:none"
-                        d="m 176.01562,192.00195 a 16,16 0 0 0 -0.0176,0.002 h 0.0371 a 16,16 0 0 0 -0.0195,-0.002 z m -2.92578,0.28516 a 16,16 0 0 0 -0.27734,0.0449 16,16 0 0 1 0.27734,-0.0449 z m -2.9707,0.85937 a 16,16 0 0 0 -0.34766,0.13282 16,16 0 0 1 0.34766,-0.13282 z m -2.77539,1.42774 a 16,16 0 0 0 -0.2168,0.11523 16,16 0 0 0 -0.13086,0.11133 16,16 0 0 1 0.34766,-0.22656 z m -2.81445,2.30469 a 16,16 0 0 0 -0.20703,0.20898 16,16 0 0 1 0.20703,-0.20898 z m -2.22852,2.88476 a 16,16 0 0 0 -0.0918,0.14258 16,16 0 0 1 0.0918,-0.14258 z m -1.5293,3.34961 a 16,16 0 0 0 -0.0137,0.0527 16,16 0 0 1 0.0137,-0.0527 z m -0.69336,3.45117 a 16,16 0 0 0 -0.0117,0.21289 16,16 0 0 1 0.0117,-0.21289 z m 0.0762,3.51563 a 16,16 0 0 0 0.0508,0.32226 16,16 0 0 1 -0.0508,-0.32226 z m 0.84961,3.43359 a 16,16 0 0 0 0.13281,0.34375 16,16 0 0 1 -0.13281,-0.34375 z m 1.59961,3.19531 a 16,16 0 0 0 0.0859,0.16407 L 178.10547,240 H 208 a 16.000007,16.000007 0 0 1 13.5332,7.46289 16,16 0 0 0 -0.21679,-0.33984 l -15.41407,-23.11914 h -29.90429 a 16,16 0 0 1 -13.39453,-7.29493 z m 58.95507,30.79297 a 16.000007,16.000007 0 0 1 0.85938,1.55274 16,16 0 0 0 -0.85938,-1.55274 z m 0.86329,1.56055 a 16.000007,16.000007 0 0 1 0.67968,1.64453 16,16 0 0 0 -0.67968,-1.64453 z m 0.68359,1.6582 a 16.000007,16.000007 0 0 1 0.48437,1.67578 16,16 0 0 0 -0.48437,-1.67578 z m 0.50391,1.75977 a 16.000007,16.000007 0 0 1 0.2832,1.67187 16,16 0 0 0 -0.2832,-1.67187 z m 0.29492,1.77148 a 16.000007,16.000007 0 0 1 0.0957,1.68164 16,16 0 0 0 -0.0957,-1.68164 z m -0.13086,4.42969 a 16.000007,16.000007 0 0 1 -0.0469,0.26758 16,16 0 0 0 0.0469,-0.26758 z m -0.10547,0.56055 a 16.000007,16.000007 0 0 1 -0.0508,0.24804 16,16 0 0 0 0.0508,-0.24804 z m -0.13867,0.61523 a 16.000007,16.000007 0 0 1 -0.0488,0.18946 16,16 0 0 0 0.0488,-0.18946 z m -0.15235,0.56641 a 16.000007,16.000007 0 0 1 -0.0488,0.16211 16,16 0 0 0 0.0488,-0.16211 z m -0.16992,0.55078 a 16.000007,16.000007 0 0 1 -0.0469,0.14062 16,16 0 0 0 0.0469,-0.14062 z m -12.48828,10.79101 a 16.000007,16.000007 0 0 1 -0.0547,0.01 16,16 0 0 0 0.0547,-0.01 z"
-                        transform="scale(0.26458333)" />
-                        <path
-                        style="color:#000000;fill:#ffffff;stroke-linecap:round;-inkscape-stroke:none"
-                        d="m 46.566406,50.800781 a 4.2333331,4.2333331 0 0 0 -4.232422,4.232422 4.2333331,4.2333331 0 0 0 4.232422,4.234375 H 59.267578 A 4.2333331,4.2333331 0 0 0 63.5,55.033203 4.2333331,4.2333331 0 0 0 59.267578,50.800781 Z"
-                        id="path330814" />
-                        <path
-                        style="color:#000000;fill:#ffffff;stroke-linecap:round;-inkscape-stroke:none"
-                        d="m 42.333984,63.5 a 4.233335,4.233335 0 0 0 -4.234375,4.232422 4.233335,4.233335 0 0 0 4.234375,4.234375 H 55.033203 A 4.233335,4.233335 0 0 0 59.267578,67.732422 4.233335,4.233335 0 0 0 55.033203,63.5 Z"
-                        id="path330929" />
-                        <g
-                        id="g325879"
-                        style="fill:url(#linearGradient325919);fill-opacity:1">
-                        <circle
-                            style="fill:url(#linearGradient333423);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
-                            id="path311944"
-                            cx="46.566666"
-                            cy="55.033329"
-                            r="4.2333331" />
-                        <circle
-                            style="fill:url(#linearGradient333425);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
-                            id="circle312026"
-                            cx="59.26667"
-                            cy="55.033329"
-                            r="4.2333331" />
-                        <circle
-                            style="fill:url(#linearGradient333427);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
-                            id="circle312028"
-                            cx="42.333336"
-                            cy="67.73333"
-                            r="4.2333331" />
-                        <circle
-                            style="fill:url(#linearGradient333429);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
-                            id="circle312030"
-                            cx="55.03334"
-                            cy="67.73333"
-                            r="4.2333331" />
-                        <circle
-                            style="fill:url(#linearGradient332074);fill-opacity:1;stroke:none;stroke-width:0.264583;stroke-linecap:round"
-                            id="circle312032"
-                            cx="50.799999"
-                            cy="80.433334"
-                            r="4.2333331" />
-                        </g>
-                        <path
-                        style="fill:#cccccc;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-                        d="m 55.670148,61.055281 -9.103741,-1.787702 7.91192,1.21e-4 z"
-                        id="path332386" />
-                        <path
-                        style="fill:#cccccc;stroke:none;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-                        d="m 51.434748,73.754247 -9.103741,-1.787702 7.91192,1.21e-4 z"
-                        id="path333163" />
-                    </g>
-                    </g>
+                    id="layer1">
+                    <path
+                    id="rect2498"
+                    style="fill:none;stroke:#ffffff;stroke-width:6.52224367;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;fill-opacity:1;stroke-opacity:1"
+                    d="m 52.12033,3.2610981 c -10.827205,0 -19.543691,8.7164869 -19.543691,19.5436919 0,10.827205 8.716486,19.543691 19.543691,19.543691 H 23.472797 c -0.393816,-0.01334 -0.788094,-0.02031 -1.183332,-0.0096 -0.16546,0.0044 -0.330587,0.02918 -0.496213,0.03823 -0.140087,0.0075 -0.279913,0.02086 -0.419896,0.02862 -0.169208,0.01212 -0.337813,0.02179 -0.505742,0.03823 -0.251527,0.02585 -0.502761,0.05964 -0.753897,0.09547 -0.285289,0.03897 -0.568185,0.08254 -0.84932,0.133697 -0.02835,0.0051 -0.05759,0.0042 -0.08589,0.0096 -0.03811,0.0073 -0.07647,0.01158 -0.114474,0.01902 -7.746924,1.489377 -13.8405977,7.52305 -15.4116662,15.239876 -0.091952,0.45145 -0.1495583,0.911709 -0.209948,1.374165 -0.00894,0.06684 -0.017541,0.133881 -0.028631,0.200361 -0.027801,0.231163 -0.056628,0.463047 -0.076367,0.69663 -0.00347,0.04118 -0.0062,0.08273 -0.00953,0.124094 -0.024677,0.31584 -0.038113,0.633912 -0.047689,0.954088 -0.0062,0.200664 -0.019104,0.400157 -0.019104,0.601212 0,0.47819 0.023843,0.95252 0.057263,1.421901 0.010846,0.146994 0.014414,0.291937 0.028631,0.438949 -0.00787,-0.08467 -0.00273,-0.172666 -0.00957,-0.257681 0.2564621,3.186012 1.2609591,6.15641 2.8533302,8.722154 2.2330133,3.696055 29.000641,50.223863 29.000641,50.223863 5.413601,9.37663 17.324162,12.56117 26.700786,7.14758 9.376624,-5.41361 12.570698,-17.31464 7.157095,-26.69126 L 56.662725,81.435865 h 24.773143 c 10.827204,0 19.543692,-8.716487 19.543692,-19.543692 0,-10.827205 -8.716488,-19.543692 -19.543692,-19.543692 H 110.7514 c 10.82721,0 19.54369,-8.716486 19.54369,-19.543691 0,-10.827205 -8.71648,-19.5436919 -19.54369,-19.5436919 z" />
                 </g>
                 </svg>
             </a>
