node structure complete

--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -57,7 +57,11 @@
     <!-- right top menu -->
     <div class='menu-container' style='width:clamp(1rem, 15vw, 17rem); height:60vh; top:0; right:0;
         display:flex; align-items: center; justify-content: center;' id='node-editor'>
-        NODE EDITOR
+        <div class='node-menu-container' id='default-node-menu'>
+            <p>
+                Click on a node to edit it
+            </p>
+        </div>
     </div>
 
     <!-- right bottom menu -->
