started export functionality

--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -86,6 +86,12 @@
         <button class='absolute-btn' id='test-net'>
             Test Network
         </button>
+
+        <hr style='width:30%; margin: 1vh 0 1vh 0'>
+
+        <button class='absolute-btn' id='export-net'>
+            Export Network
+        </button>
     </div>
 
     <!-- left top menu -->
