removed html from url

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </section>
     </section>
     <section style="margin-top:10vh; width:50vw; display:flex; justify-content: center; align-items: center;">
-        <a class='buttonlike nolinkunderline absolute-btn' href='model-maker/index.html'>
+        <a class='buttonlike nolinkunderline absolute-btn' href='model-maker'>
             Create Model
         </a>
-        <a class='buttonlike nolinkunderline absolute-btn' href='about/index.html'>
+        <a class='buttonlike nolinkunderline absolute-btn' href='about'>
             What Is This
         </a>
 
