--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -161,7 +161,7 @@
     </button>
     
     <!-- return -->
-    <a href='../index.html'>
+    <a href='../'>
         <div class='menu-container' style='width:clamp(1rem, 15vw, 17rem); height:clamp(1rem, 7vh, 4rem); top:0; left:0; display:flex; align-items: center; justify-content: center'>
             <h2 class='unselectable logo-text' style='font-size: clamp(0.1rem, min(3vh, 1.3vw), 4rem); letter-spacing:3px; color:gray; cursor:pointer'>
                 DeepFusion
