--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
     </p>
 
     <a class='buttonlike nolinkunderline absolute-btn' style='position:absolute; bottom: 20vh;'
-    href="../index.html">
+    href="../">
         Return
     </a>
 
