--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -154,11 +154,11 @@
     </div>
 
     <!-- help btn -->
-    <button class='subtle-btn' style='position:absolute; top:1vh; right:calc(clamp(1rem, 15vw, 17rem) + 1vh);'>
+    <!-- <button class='subtle-btn' style='position:absolute; top:1vh; right:calc(clamp(1rem, 15vw, 17rem) + 1vh);'>
         <h3 class='unselectable' style='cursor:pointer'>
             ?
         </h3>
-    </button>
+    </button> -->
     
     <!-- return -->
     <a href='../'>
