added dropout node, license page, and revamped UI.

--- a/blank/index.html
+++ b/blank/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>
-        DeepFusion
+        About
     </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
