--- a/index.html
+++ b/index.html
@@ -19,34 +19,23 @@
     <section style="padding-top: 10vh;">
         <section style='display:flex; flex-direction: row; padding-right: 2vw'>
             <a href="https://github.com/LemonOrangeWasTaken/DeepFusion">
-                <svg
-                width="auto"
-                height="auto"
-                style='height: clamp(0.5rem, min(10vw, 10vh), 10rem); margin-right: 2vw; padding-top: 2vh'
-                viewBox="0 0 135.46666 135.46667"
-                version="1.1"
-                id="svg5"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:svg="http://www.w3.org/2000/svg">
-                <defs
-                    id="defs2" />
-                <g
-                    id="layer1">
-                    <path
-                    id="rect2498"
-                    style="fill:none;stroke:#ffffff;stroke-width:6.52224367;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;fill-opacity:1;stroke-opacity:1"
-                    d="m 52.12033,3.2610981 c -10.827205,0 -19.543691,8.7164869 -19.543691,19.5436919 0,10.827205 8.716486,19.543691 19.543691,19.543691 H 23.472797 c -0.393816,-0.01334 -0.788094,-0.02031 -1.183332,-0.0096 -0.16546,0.0044 -0.330587,0.02918 -0.496213,0.03823 -0.140087,0.0075 -0.279913,0.02086 -0.419896,0.02862 -0.169208,0.01212 -0.337813,0.02179 -0.505742,0.03823 -0.251527,0.02585 -0.502761,0.05964 -0.753897,0.09547 -0.285289,0.03897 -0.568185,0.08254 -0.84932,0.133697 -0.02835,0.0051 -0.05759,0.0042 -0.08589,0.0096 -0.03811,0.0073 -0.07647,0.01158 -0.114474,0.01902 -7.746924,1.489377 -13.8405977,7.52305 -15.4116662,15.239876 -0.091952,0.45145 -0.1495583,0.911709 -0.209948,1.374165 -0.00894,0.06684 -0.017541,0.133881 -0.028631,0.200361 -0.027801,0.231163 -0.056628,0.463047 -0.076367,0.69663 -0.00347,0.04118 -0.0062,0.08273 -0.00953,0.124094 -0.024677,0.31584 -0.038113,0.633912 -0.047689,0.954088 -0.0062,0.200664 -0.019104,0.400157 -0.019104,0.601212 0,0.47819 0.023843,0.95252 0.057263,1.421901 0.010846,0.146994 0.014414,0.291937 0.028631,0.438949 -0.00787,-0.08467 -0.00273,-0.172666 -0.00957,-0.257681 0.2564621,3.186012 1.2609591,6.15641 2.8533302,8.722154 2.2330133,3.696055 29.000641,50.223863 29.000641,50.223863 5.413601,9.37663 17.324162,12.56117 26.700786,7.14758 9.376624,-5.41361 12.570698,-17.31464 7.157095,-26.69126 L 56.662725,81.435865 h 24.773143 c 10.827204,0 19.543692,-8.716487 19.543692,-19.543692 0,-10.827205 -8.716488,-19.543692 -19.543692,-19.543692 H 110.7514 c 10.82721,0 19.54369,-8.716486 19.54369,-19.543691 0,-10.827205 -8.71648,-19.5436919 -19.54369,-19.5436919 z" />
-                </g>
-                </svg>
+                <img src="icon-colored.svg" style='height: clamp(0.5rem, min(13vw, 13vh), 10rem); margin-right: 2vw; padding-top: 2vh'
+                alt="DeepFusion">
             </a>
 
             <section>
                 <h1 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.5rem, min(7vh, 7vw), 7rem); letter-spacing: 5px; margin:0'>
                     DeepFusion
                 </h1>
-                <h2 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.5rem, min(2vh, 2vw), 2rem); letter-spacing: 1px; margin:0; margin-left:1vw'>
-                    By LemonOrange
-                </h2>
+                <section style="display:flex; flex-direction: row; justify-content: space-between; align-items: center; padding-left:1vw; padding-right:0.7vw">
+                    <h2 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.2rem, min(2vh, 2vw), 2rem); letter-spacing: 1px; margin:0;'>
+                        By LemonOrange
+                    </h2>
+                    <h3 class='unselectable' style='cursor: default; font-weight: 600; font-size: clamp(0.1rem, min(1.7vh, 1.7vw), 1.7rem);
+                    letter-spacing: 1px; margin:0; margin-left:1vw; color: #5c5c5c;'>
+                        0.1.1
+                    </h3>
+                </section>
             </section>
         </section>
     </section>
@@ -57,15 +46,14 @@
         <a class='buttonlike nolinkunderline absolute-btn' href='about'>
             What Is This
         </a>
-
     </section>
 
     <!-- github corner thing -->
     <a href="https://github.com/LemonOrangeWasTaken/DeepFusion" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#ffffff; color:#1d2021; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
     
-    <p class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray'>
+    <a href="./license-info/" class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray'>
         Copyright &copy; 2021 LemonOrange
-    </p>
+    </a>
 
     <script src="anime.min.js"></script>
     <script src="index.js"></script>
