--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -108,7 +108,7 @@
                 <a style='color:rgb(255, 68, 68); font-weight: 600;' href='https://www.youtube.com/channel/UCut2xeBl7HcPEPatqpEUoQw'>YouTube</a>.
             </span>
             <span style='margin:0'>---</span>
-            <span class='info'>Type "help", "copyright", "license", or "about" for more information</span>
+            <span class='info'>Type "help", "about", or "license" for more information</span>
         </div>
         
         <!-- terminal input section -->
@@ -270,8 +270,11 @@
         </section>
     </section>
 
+    <!-- copyright information -->
     <p class='copyrightmsg unselectable' style='position: absolute; bottom:0.5%; color:rgba(255, 255, 255, 0.178); z-index:100'>
-        Copyright &copy; 2021 LemonOrange | To learn more, visit this project's
+        <a href="../license-info/" style='color:inherit; text-decoration: none;'>
+            Copyright &copy; 2021 LemonOrange
+        </a> | To learn more, visit this project's
         <a style='text-decoration:none; color:rgba(255, 255, 255, 0.363); font-weight: 600;' href='https://github.com/LemonOrangeWasTaken/DeepFusion'>GitHub</a>
     </p>
 
