added terminal feature

--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <!-- right top menu -->
-    <div class='menu-container' style='width:clamp(1rem, 15vw, 17rem); height:68vh; top:0; right:0;
+    <div class='menu-container' style='width:clamp(1rem, 15vw, 17rem); height:calc(100vh - 35vh); top:0; right:0;
         display:flex; align-items: center; justify-content: center;' id='node-editor'>
         <div class='node-menu-container' id='default-node-menu'>
             <p>
@@ -76,7 +76,7 @@
     </div>
 
     <!-- right bottom menu -->
-    <div class='menu-container' style='width:clamp(1rem, 15vw, 17rem); height:32vh; bottom:0; right:0;
+    <div class='menu-container' style='width:clamp(1rem, 15vw, 17rem); height:35vh; bottom:0; right:0;
         display:flex; align-items: center; justify-content: flex-start; flex-direction: column;
         padding-top: 2vh; padding-bottom: 2vh'>
         <h4>
@@ -116,10 +116,11 @@
 
     <!-- left top menu -->
     <div class='
-        menu-container' style='width:clamp(1rem, 15vw, 17rem); height:calc(100vh - clamp(1rem, 7vh, 4rem) - 50vh); top:clamp(1rem, 7vh, 4rem); left:0;
+        menu-container' style='width:clamp(1rem, 15vw, 17rem); height:calc(100vh - clamp(1rem, 7vh, 4rem) - 45vh); top:clamp(1rem, 7vh, 4rem); left:0;
         display:flex; align-items: center; justify-content: center; padding:0vh 0.5vw 1vh 0.5vw; flex-direction: column;'>
+
         <div class='terminal' id='dfterm'>
-            <span>Welcome to DeepFusion <span style='color:greenyellow'>0.1.1</span>.</span>
+            <span>Welcome to DeepFusion <span style='color:greenyellow'>0.2.0</span>.</span>
             <span>If you want to you can support this project on 
                 <a style='color:rgb(0, 153, 255); font-weight: 600;' href='https://github.com/LemonOrangeWasTaken/DeepFusion'>GitHub</a>
                 , or subscribe to my 
@@ -140,7 +141,7 @@
     </div>
     <!-- left bottom menu -->
     <div class='
-        menu-container' style='width:clamp(1rem, 15vw, 17rem); height:calc(100vh - clamp(1rem, 7vh, 4rem) - calc(100vh - clamp(1rem, 7vh, 4rem) - 50vh)); bottom:0; left:0;
+        menu-container' style='width:clamp(1rem, 15vw, 17rem); height:calc(100vh - clamp(1rem, 7vh, 4rem) - calc(100vh - clamp(1rem, 7vh, 4rem) - 45vh)); bottom:0; left:0;
         display:flex; align-items: center; justify-content: flex-start; padding-top:2vh; flex-direction: column;'>
         <h4>
             Training Parameters
