Fixed typos, slight UI improvement

--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -117,10 +117,10 @@
     <!-- left top menu -->
     <div class='
         menu-container' style='width:clamp(1rem, 15vw, 17rem); height:calc(100vh - clamp(1rem, 7vh, 4rem) - 45vh); top:clamp(1rem, 7vh, 4rem); left:0;
-        display:flex; align-items: center; justify-content: center; padding:0vh 0.5vw 1vh 0.5vw; flex-direction: column;'>
+        display:flex; align-items: center; justify-content: center; padding:0vh 0.5vw 0vh 0.5vw; flex-direction: column;'>
 
         <div class='terminal' id='dfterm'>
-            <span>Welcome to DeepFusion <span style='color:greenyellow'>0.2.0</span>.</span>
+            <span style='margin:0.5vh 0 0 0'>Welcome to DeepFusion <span style='color:greenyellow'>0.2.0</span>.</span>
             <span>If you want to you can support this project on 
                 <a style='color:rgb(0, 153, 255); font-weight: 600;' href='https://github.com/LemonOrangeWasTaken/DeepFusion'>GitHub</a>
                 , or subscribe to my 
@@ -134,7 +134,7 @@
         
         <section style='display:flex; width:100%; height:auto;'>
             <input type="text" class='terminal-in' id='term-input'
-                style="padding:0.5vh 0 0.5vh 0.5vw; font-family: 'Courier New', 'Courier', 'monospace';" placeholder=">">
+                style="padding:0.7vh 0 0.7vh 0.5vw; font-family: 'Courier New', 'Courier', 'monospace';" placeholder=">>>">
             </input>
         </section>
 
