fixed legal information

--- a/license-info/index.html
+++ b/license-info/index.html
@@ -777,7 +777,7 @@
 
                 <br><br>
                 IN NO EVENT UNLESS REQUIRED BY APPLICABLE LAW OR AGREED TO IN WRITING
-                WILL ANY COPYRIGHT HOLDER, OR ANY OTHERasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf
+                WILL ANY COPYRIGHT HOLDER, OR ANY OTHER
 
                 <strong>
                     &emsp;17. Interpretation of Sections 15 and 16.
