--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
     <section style="padding-top: 10vh;">
         <section style='display:flex; flex-direction: row; padding-right: 2vw'>
             <a href="https://github.com/LemonOrangeWasTaken/DeepFusion">
-                <img src="icon-colored.svg" style='height: clamp(0.5rem, min(15vw, 15vh), 10rem); margin-right: 2vw; padding-top: 2vh'
+                <img src="icon-colored.svg" style='height: clamp(0.5rem, min(13vw, 13vh), 10rem); margin-right: 2vw; padding-top: 2vh'
                 alt="DeepFusion">
             </a>
 
             <section>
-                <h1 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.5rem, min(7vh, 7vw), 7rem); letter-spacing: 5px; margin:0'>
+                <h1 class='unselectable' style='cursor: default; font-weight: 500; font-size: clamp(0.5rem, min(7vh, 7vw), 7rem);
+                letter-spacing: 5px; margin:0; letter-spacing:0.1rem; margin:0'>
                     DeepFusion
                 </h1>
-                <section style="display:flex; flex-direction: row; justify-content: space-between; align-items: center; padding-left:1vw; padding-right:0.7vw">
-                    <h2 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.2rem, min(2vh, 2vw), 2rem); letter-spacing: 1px; margin:0;'>
+                <section style="display:flex; flex-direction: row; justify-content: space-between; align-items: center; padding-left:0rem; padding-right:0.7vw">
+                    <h2 class='unselectable' style='cursor: default; font-weight: 300; font-size: clamp(0.2rem, min(2vh, 2vw), 2rem);
+                    letter-spacing: 1px; margin:0;'>
                         By LemonOrange
                     </h2>
                     <h3 class='unselectable' style='cursor: default; font-weight: 600; font-size: clamp(0.1rem, min(1.7vh, 1.7vw), 1.7rem);
                     letter-spacing: 1px; margin:0; margin-left:1vw; color: #5c5c5c;'>
-                        0.2.0
+                        0.3.0
                     </h3>
                 </section>
             </section>
