added new ui changes

--- a/about/index.html
+++ b/about/index.html
@@ -14,25 +14,29 @@
 </head>
 
 <body style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
-
-    <h2 class='unselectable'>
-        About DeepFusion
-    </h2>
-
-    <p style='text-align:center; margin-top: 2vh; cursor: text;'>
-        DeepFusion is an online application aimed at making neural network creation and training easier, faster, and expandable. <br>
-        Through the use of nodes, DeepFusion hopes to simplify and speed up the process of making and training a neural network.
-    </p>
+    <section style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column; margin-bottom:13vh">
+        <h1 class='unselectable'>
+            What is it?
+        </h1>
+    
+        <p style='text-align:center; margin-top: 2vh; cursor: text; font-size: clamp(0.05rem, min(2vh, 2vw), 2rem);'>
+            DeepFusion is an online application that makes creating and training neural network easier, simpler, and faster.
+        </p>
+        <p style='text-align:center; margin-top: 1vh; cursor: text; font-size: clamp(0.05rem, min(2vh, 2vw), 2rem);'>
+            Using the versatility and power of nodes, it provides an intuitive way to create even the most complex neural networks. <br>
+            And when it comes time to train your network, it provides the ability for you to do so with your own data in just a single button press.
+        </p>
+    </section>
 
     <!-- button list -->
     <section style='width:100%; display: flex; flex-direction: row; justify-content:center; align-items: center; position:absolute; bottom: 20vh;'>
-        <a class='buttonlike nolinkunderline absolute-btn'
+        <a class='buttonlike nolinkunderline absolute-btn large-btn'
         href="../">
-            Return
+            Return Home
         </a>
-        <a class='buttonlike nolinkunderline absolute-btn'
+        <a class='buttonlike nolinkunderline absolute-btn large-btn'
         href="../license-info">
-            License
+            View License
         </a>
     </section>
 
