--- a/license-info/index.html
+++ b/license-info/index.html
@@ -800,13 +800,9 @@
 
     <!-- button list -->
     <section style='width:100%; display: flex; flex-direction: row; justify-content:center; align-items: center; margin-top: 5vh;'>
-        <a class='buttonlike nolinkunderline absolute-btn'
+        <a class='buttonlike nolinkunderline absolute-btn large-btn'
         href="../">
-            Home
-        </a>
-        <a class='buttonlike nolinkunderline absolute-btn'
-        href="../about">
-            About
+            Return Home
         </a>
     </section>
 
