--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -299,8 +299,11 @@
     <script src="../anime.min.js"></script>
     <script src="../json2html.min.js"></script>
     <script src="style.js"></script>
-    <script src="templates.js"></script>
+    <script src="node-templates.js"></script>
+    <script src="menu-templates.js"></script>
+    <script src="menu-handler.js"></script>
     <script src="events.js"></script>
+    <script src="standards.js"></script>
     <script src="modeling.js"></script>
     <script src="terminal-handler.js"></script>
     <script src="edge-render.js"></script>
