quick fix to home screen

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </section>
         </section>
     </section>
-    <section style="margin-top:10vh; width:50vw; display:flex; justify-content: center; align-items: center;">
+    <section style="margin-top:3rem; width:50vw; display:flex; justify-content: center; align-items: center;">
         <a class='buttonlike nolinkunderline absolute-btn large-btn' href='model-maker'>
             Create Model
         </a>
