fixed fundemental UI flaws, performance issues, and canvas bugs.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     letter-spacing: 0.1rem; margin:0; margin-left:0.3vw'>
                         By LemonOrange
                     </h2>
-                    <h3 class='unselectable' style='cursor: default; font-weight: 700; font-size: clamp(0.1rem, min(2.6vh, 2.6vw), 2rem);
-                    letter-spacing: 0rem; margin:0; color: #5c5c5c; font-family: poppins;'>
-                        3.0
+                    <h3 class='unselectable' style='cursor: default; font-weight: 500; font-size: 1.2rem;
+                    letter-spacing: 0rem; margin:0; color: #747474; font-family: poppins;'>
+                        Beta 1.0
                     </h3>
                 </section>
             </section>
