fixed crosshair bug

--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -114,7 +114,7 @@
 
             <section style="width:95%; height: fit-content">
                 <div class='terminal' style="min-height:10rem; height:calc(100vh - 24rem)" id='dfterm'>
-                    <span style='margin:0.5vh 0 0 0'>Welcome to DeepFusion <span style='color:greenyellow'>3.0</span>.</span>
+                    <span style='margin:0.5vh 0 0 0'>Welcome to DeepFusion <span style='color:greenyellow'>Beta 1.0</span>.</span>
                     <span>If you want to you can support this project on 
                         <a style='color:rgb(0, 153, 255); font-weight: 600;' href='https://github.com/LemonOrangeWasTaken/DeepFusion'>GitHub</a>
                         , or subscribe to my 
