--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>
-        About
+        About DeepFusion
     </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
