UI and backend updates

--- a/blank/index.html
+++ b/blank/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <title>
-        About
+        DeepFusion Beta
     </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://deepfusion.org/">
+    <meta property="og:title" content="DeepFusion | Graphical AI Development Environment">
+    <meta property="og:description" content="Create, train, and export custom neural networks without code or hassle.">
+    <meta property="og:image" content="https://deepfusion.org/img/banner.png">
+
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
