major bug fixes

--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,9 @@
     <a href="../license-info/" class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray'>
         Copyright &copy; 2021 LemonOrange
     </a>
+    
     <script src="../anime.min.js"></script>
     <script src="index.js"></script>
+    <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
 </body>
 </html>
