--- a/blank/index.html
+++ b/blank/index.html
@@ -29,5 +29,6 @@
     </p>
     <script src="../anime.min.js"></script>
     <script src="index.js"></script>
+    <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
 </body>
 </html>
