--- a/license-info/index.html
+++ b/license-info/index.html
@@ -820,5 +820,6 @@
     
     <script src="../anime.min.js"></script>
     <script src="index.js"></script>
+    <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
 </body>
 </html>
