improved home page, fixed training bug

--- a/about/index.html
+++ b/about/index.html
@@ -22,18 +22,18 @@
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
 </head>
 
-<body style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
+<body id="particles-js" style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
     <section style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column; margin-bottom:6rem;
             width:60rem">
-        <h2 class='unselectable' style="font-size: 2.5rem; font-weight:430; font-family: Montserrat;">
+        <h2 class='unselectable' style="font-size: 2.5rem; font-weight:300; font-family: Montserrat; letter-spacing: 0.1rem;">
             <Strong>What Is This?</Strong>
         </h2>
     
-        <p style='text-align:center; margin-top: 2rem; cursor: text; font-size: 1rem; margin-bottom:0.5rem'>
+        <p style='text-align:center; margin-top: 2rem; cursor: text; font-size: 1rem; margin-bottom:0.5rem; font-weight: 200;'>
             In a nutshell: DeepFusion is an app that provides allows you to create and train neural networks graphically.
         </p>
         <hr style="width:20rem">
-        <p style='text-align:center; margin-top: 0.5rem; cursor: text; font-size: 1rem;'>
+        <p style='text-align:center; margin-top: 0.5rem; cursor: text; font-size: 1rem; font-weight: 200'>
             It uses the power of nodes and connections to make creating even the most complex neural networks an easy task,
             which also eliminates the need to debug technical errors and annoying problems that comes with the traditional way of making NNs. 
         </p>
@@ -59,6 +59,8 @@
         Copyright &copy; 2021 LemonOrange
     </a>
     
+    <script src="../minjs/particles.min.js"></script>
+
     <script src="../anime.min.js"></script>
     <script src="index.js"></script>
     <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
