--- a/blank/index.html
+++ b/blank/index.html
@@ -22,12 +22,14 @@
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
 </head>
 
-<body style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
+<body id="particles-js" style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
 
     <p class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray'>
         Copyright &copy; 2021 LemonOrange
     </p>
     <script src="../anime.min.js"></script>
+    <script src="../minjs/particles.min.js"></script>
+
     <script src="index.js"></script>
     <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
 </body>
