--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
-
-    <section style="padding-top: 10vh;">
+<body id="particles-js" style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column; padding:0; top:-1vh; width:102vw; left:-1vw">
+    <section style="padding-top: 10vh; z-index: 5">
         <section style='display:flex; flex-direction: row; padding-right: 2vw'>
             <a href="https://github.com/LemonOrangeWasTaken/DeepFusion" style="position: relative; width: fit-content;">
                 <img src="icon-colored.svg" style='height: 10rem; margin-right: 3vw; padding-top: 3vh; position: absolute; filter: blur(5px); opacity: 0.5;'
@@ -36,12 +35,12 @@
 
             <section>
                 <h1 class='unselectable' style='cursor: default; font-weight: 300; font-size: 5rem;
-                letter-spacing: 0.1rem; margin:0; margin:0'>
+                letter-spacing: 0.1rem; margin:0; margin:0; text-shadow: 0 0 7px rgba(255, 255, 255, 0.582);'>
                     DeepFusion
                 </h1>
                 <section style="display:flex; flex-direction: row; justify-content: space-between; align-items: center; padding-left:0rem; padding-right:0.7vw">
                     <h2 class='unselectable' style='cursor: default; font-weight: 300; font-size: 1.4rem;
-                    letter-spacing: 0.1rem; margin:0; margin-left:0.3vw'>
+                    letter-spacing: 0.1rem; margin:0; margin-left:0.3vw; text-shadow: 0 0 7px rgba(255, 255, 255, 0.582)'>
                         By LemonOrange
                     </h2>
                     <h3 class='unselectable' style='cursor: default; font-weight: 500; font-size: 1.2rem;
@@ -52,7 +51,7 @@
             </section>
         </section>
     </section>
-    <section style="margin-top:3rem; width:50vw; display:flex; justify-content: center; align-items: center;">
+    <section style="margin-top:3rem; width:50vw; display:flex; justify-content: center; align-items: center; z-index: 5">
         <a class='buttonlike nolinkunderline absolute-btn large-btn' href='model-maker'>
             Create Model
         </a>
@@ -60,16 +59,18 @@
             What Is This
         </a>
     </section>
-    <a style="font-size: 0.85rem; color:#767676; margin-top: 0.75rem;" href="https://github.com/LemonOrangeWasTaken/DeepFusion/issues" target="_blank">Report Bug</a>
+    <a style="font-size: 0.85rem; color:#767676; margin-top: 0.75rem; z-index: 5" href="https://github.com/LemonOrangeWasTaken/DeepFusion/issues" target="_blank">Report Bug</a>
 
     <!-- github corner thing -->
-    <a href="https://github.com/LemonOrangeWasTaken/DeepFusion" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#ffffff; color:#1d2021; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+    <a style="position: fixed; right:0; top:0" href="https://github.com/LemonOrangeWasTaken/DeepFusion" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#ffffff; color:#1d2021; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
     
     <a href="./license-info/" class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray'>
         Copyright &copy; 2021 LemonOrange
     </a>
 
     <script src="anime.min.js"></script>
+    <script src="minjs/particles.min.js"></script>
+
     <script src="index.js"></script>
     <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
 </body>
