added new analytics (Plausible)

--- a/index.html
+++ b/index.html
@@ -73,5 +73,6 @@
 
     <script src="index.js"></script>
     <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
+    <script defer data-domain="deepfusion.org" src="https://plausible.io/js/plausible.js"></script>
 </body>
 </html>
