--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -319,6 +319,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
     <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
+    <script defer data-domain="deepfusion.org" src="https://plausible.io/js/plausible.js"></script>
     <script src="../anime.min.js"></script>
     <script src="../json2html.min.js"></script>
     <script src="terminal-handler.js"></script>
