updated site meta

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta property="og:description" content="Create, train, and export custom neural networks without code or hassle.">
     <meta property="og:image" content="https://deepfusion.org/img/banner.png">
 
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:creator" content="@LemonOrangeTW">
+    <meta property="twitter:creator:id" content="@LemonOrangeTW">
+
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
