fixed github corner icon

--- a/blank/index.html
+++ b/blank/index.html
@@ -28,7 +28,7 @@
 
 <body id="particles-js" style="display:flex; align-items: center; justify-content: center; height:100vh; flex-direction: column">
 
-    <p class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray'>
+    <p class='copyrightmsg unselectable' style='position: absolute; bottom:1vh; color:gray; z-index:5'>
         Copyright &copy; 2021 LemonOrange
     </p>
     <script src="../anime.min.js"></script>
