organized files, added readme

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <section style="padding-top: 10vh; z-index: 5">
         <section style='display:flex; flex-direction: row; padding-right: 2vw'>
             <a href="https://github.com/LemonOrangeWasTaken/DeepFusion" style="position: relative; width: fit-content;">
-                <img src="icon-colored.svg" style='height: 10rem; margin-right: 3vw; padding-top: 3vh; position: absolute; filter: blur(5px); opacity: 0.5;'
+                <img src="img/resources/icon-colored.svg" style='height: 10rem; margin-right: 3vw; padding-top: 3vh; position: absolute; filter: blur(5px); opacity: 0.5;'
                 alt="DeepFusion">
-                <img src="icon-colored.svg" style='height: 10rem; margin-right: 3vw; padding-top: 3vh;'
+                <img src="img/resources/icon-colored.svg" style='height: 10rem; margin-right: 3vw; padding-top: 3vh;'
                 alt="DeepFusion">
             </a>
 
